Bug 1392574 - Don't attempt to composite a titlebar image if we don't have any. r=mattwoodrow

MozReview-Commit-ID: 59NKegwszzO